[package]
name = "lambda-escrow"
version = "1.0.0"
description = "Created with Autonomous"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lambda_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
